# project_map

./: CMakeLists.txt  Makefile  README.md  log.properties  parameter.ini  pv.sh  run.sh
data/: .RData  .Rhistory  BNX-VS-Ref.map  BNX-VS-Ref_data.map  bad_mole.bnx  deal_Map_loc_2.py  delete_distribution  huada_map  huada_map_4686  huada_map_6943  mole_10634  mole_13754  mole_162  mole_1725  mole_2101  mole_22527  mole_2409  mole_2755  mole_499  p_test_mole  ref.cmap  ref_filter.cmap  settle_mole_result  test_input.bnx
data/debugdata/: map_result  mean_value.py  test_mole  test_ref  test_score  test_select  test_tmp
data/p_test_ref/: ref.cmap  ref0
data/standard_data/: select.txt
py/: check.py  init.py  map.py  score.py  tags
py/script/: bit_tool.py  calc_parm.py  compare.py  compare_tool.py  compare_tool1.py  compare_tool2.py  compare_tool3.py  compare_tool4.py  convert.py  deal_Map_loc_2.py  filter_ref.py  get_bad_mole.py  get_huada_map.py  get_length.py  get_map_result_idx.py  get_new_ref.py  get_ref_dis.py  get_right_map.py  init.py  p_value.py  parm.py  person_test.py  small_tool.py  split_mole.py  stairs.py  temp.py  transform.py
src/: CMakeCache.txt  CMakeLists.txt  SplitString.cc  SplitString.h  Types.h  constant.cpp  constant.h  fast_maps.cpp  gene.cpp  gene.h  main.cpp  map.cpp  map.h  mole.cpp  mole.h  tags
